--- a/style.css
+++ b/style.css
@@ -1,504 +1,129 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-html{
-    scroll-behavior: smooth;
-}
-.max-width{
-        max-width: 1300px;    
-        padding: 0 80px;
-        margin: auto;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	font-family: 'Montserrat', sans-serif;
 }
 
-
-/* nav bar styling */
-.navbar{
-    position: fixed;
-    width: 100%;
-    z-index: 999;
-    padding: 10px 0;
-    background: black;
-    font-family: 'Ubuntu', sans-serif;
+body{
+	background: url("anime.jpg");
+    background-size: cover;
 }
-.navbar .max-width{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-}
-.navbar .logo a{
-    color: whitesmoke;
-    font-size: 40px;
-    font-weight: 600;
-
-}
-.navbar .menu li{
-    list-style: none;
-    display: inline-block;
-}
-.navbar .menu li a{
-    display: block;
-    color: whitesmoke;
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 25px;
-    transition: color 0.3s ease;
-
-}
-.navbar .menu li a:hover{
- color: crimson;
-}
-/* nav btn styling */
-.menu-btn{
-    color: whitesmoke;
-    font-size: 20px;
-    cursor: pointer;
-    display: none;
+ 
+.wrapper{
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-/* home section styling */
-.home{
-    display: flex;
-    color:black;
-    min-height: 500px;
-    font-family: 'Ubuntu', sans-serif;
+.registration_form{
+	background: none ;
+	padding: 25px;
+	border-radius: 5px;
+	width: 400px;
 }
-.home .max-width{
-    margin: auto 0 auto 40px;
+
+.registration_form .title{
+	text-align: center;
+	font-size: 20px;
+	text-transform: uppercase;
+	color: black;
+	letter-spacing: 5px;
+	font-weight: 300;
 }
-.home .text-1{
-   font-size:  35px;
-   font-weight: 600;
-   margin-left: -3px;
+
+.form_wrap{
+	margin-top: 35px;
 }
-.home .text-2{
-    font-size: 40px;
-    font-weight: 600;
-    margin-left: -3px;
-    color: turquoise;
+
+.form_wrap .input_wrap{
+	margin-bottom: 15px;
 }
-.home .text-3{
-    font-size: 30px;
-    font-weight: 600;
-    margin-left: -3px;
+
+.form_wrap .input_wrap:last-child{
+	margin-bottom: 0;
 }
-.home a{
-    display: inline-block;
-    background:crimson;
-    color: whitesmoke;
-    font-size: 20px;
-    padding: 8px 18px;
-    margin-top: 8px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.36s ease;
+
+.form_wrap .input_wrap label{
+	display: block;
+	margin-bottom: 3px;
+	color: black;
 }
-.home a:hover{
-    color: black;
+
+.form_wrap .input_grp{
+	display: flex;
+	justify-content: space-between;
+}
+
+.form_wrap .input_grp  input[type="text"]{
+	width: 165px;
+}
+
+.form_wrap  input[type="text"]{
+	width: 100%;
+	border-radius: 3px;
     background: none;
-
+	border: 1px solid #9597a6;
+	padding: 10px;
+	outline: none;
 }
 
-/* about section */
-.section{
-    padding: 100px 0;
+.form_wrap  input[type="text"]:focus{
+	border-color: #ebd0ce;
 }
 
-.about{
-    font-family: 'poppins', sans-serif;
-}
-.about .title{
-    position: relative;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
-    margin-bottom: 40px;
-    padding-bottom: 20px;
-    font-family: 'Ubuntu', sans-serif;
-
-}
-.about .title::before{
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: black;
-    transform: translateX(-50%);
-
-}
-.about .title::after{
-    content: "who i am";
-    position: absolute;
-    bottom: -12px;
-    left: 50%;
-    font-size: 20px;
-    color:crimson;
-    padding: 5px;
-    background:white;
-    transform: translateX(-50%);
-
+.form_wrap ul{
+	background: none;
+	padding: 8px 10px;
+	border-radius: 3px;
+	display: flex;
+	justify-content: center;
 }
 
-.about .about-content .h2{
-    width: 55%;
-
-}
-.about .about-content .h2{
-    font-size: 25px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-.about .about-content span{
-    color:crimson ;
-}
-.about .about-content p{
-    text-align: justify;
-    font-size: 20px;
-    font-family: 'poppins', sans-serif;
-}
-.about .about-content a{
-    text-align: center;
-    display: inline-block;
-    background: crimson;
-    color: whitesmoke;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 30px;
-    margin-top: 8px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.36s ease;
-}
-.about .about-content .right a:hover{
-    color:crimson;
-    background: none;
+.form_wrap ul li:first-child{
+	margin-right: 15px;
 }
 
-/* my skills */
-
-.section{
-    padding: 100px 0;
+.form_wrap ul .radio_wrap{
+	position: relative;
+	margin-bottom: 0;
 }
 
-.skills{
-    font-family: 'poppins', sans-serif;
-}
-.skills .title{
-    position: relative;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
-    margin-top: 40px;
-    padding-top: 10px;
-    margin-bottom: 60px;
-    padding-bottom: 20px;
-    font-family: 'Ubuntu', sans-serif;
-
-}
-.skills .title::before{
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: black;
-    transform: translateX(-50%);
-}
-.skills .title::after{
-    content: "What i Know";
-    position: absolute;
-    bottom: -12px;
-    left: 50%;
-    font-size: 20px;
-    color:crimson;
-    padding: 5px;
-    background:white;
-    transform: translateX(-50%);
-
-}
-.skills .skills-content .column{
-    width: calc(50% - 30px);
-}
-.skills .skills-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-.skills .skills-content .left .text{
-  font-size: 25px;
-  font-weight: 600;
-  margin-bottom: 10px;
-
-}
-.skills .skills-content .left p{
-    text-align: justify;
-
+.form_wrap ul .radio_wrap .input_radio{
+	position: absolute;
+	top: 0;
+	right: 0;
+	opacity: 0;
 }
 
-.skills .skills-content .left a:hover{
-    color: crimson;
-    background: none;
-}
-.skills .skills-content .right .bars{
-    margin-bottom: 15px;
-
-}
-.skills .skills-content .right .info{
-    display: flex;
-    margin-bottom: 5px;
-    align-items: center;
-    justify-content: space-between;
-}
-.skills .skills-content .right span{
-    font-weight: 500;
-    font-size: 18px;
-
-}
-.skills .skills-content .right .line{
-    height: 5px;
-    width: 100%;
-    background: lightslategray;
-    position: relative;
-}
-.skills .skills-content .right .line::before{
-    content: "";
-    position: absolute;
-    height: 100%;
-    
-    left: 0;
-    top: 0;
-    background: crimson;
-}
-.skills .skills-content .right .html::before{
-    width: 90%;
-}
-.skills .skills-content .right .CSS::before{
-    width: 85%;
-}
-.skills .skills-content .right .JavaScript::before{
-    width: 70%;
-}
-.skills .skills-content .right .Bootstrap::before{
-    width: 80%;
-}
-
-/* contact */
-/* this sction is used to bold and give underline */
-.section{
-    padding: 100px 0;
-}
-
-.contact{
-    font-family: 'poppins', sans-serif;
-}
-
-.contact .title{
-    position: relative;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
-    margin-top: 40px;
-    padding-top: 10px;
-    margin-bottom: 80px;
-    padding-bottom: 50px;
-    font-family: 'Ubuntu', sans-serif;
-
-}
-
-.contact {
-    display: flex;
-    flex-wrap: wrap;
-    
-    justify-content: space-between;
-}
-
-.contact  .text{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-
-.contact p{
-    text-align: justify;
-}
-.contact  .icons{
-    margin: 10px 0;
-}
-.contact .row{
-    display: flex;
-    height: 65px;
-    
-}
-.contact  .row .info{
-    margin-left: 20px;
-}
-.contact .row i{
-    font-size: 22px;
-    color: crimson;
-}
-.contact  .info .head{
-    font-weight: 500;
-}
-.contact .info .sub-title{
-    color: #333;
-}
-
-.contact .title::before{
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 190px;
-    height: 3px;
-    background: black;
-    transform: translateX(-50%);
-}
-.contact .title::after{
-    content: "Get in touch ";
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    font-size: 20px;
-    color:crimson;
-    padding: 5px;
-    background:white;
-    transform: translateX(-50%);
-
+.form_wrap ul .radio_wrap span{
+	display: inline-block;
+	font-size: 14px;
+	padding: 3px 20px;
+	border-radius: 3px;
+	color: white;
 }
 
 
-/* footer styling */
-
-
-footer{
-    font-family: 'poppins', sans-serif;
-}
-footer{
-    background: black;
-    padding: 15px 23px;
-    color: white;
-    text-align: center;
-}
-footer span a{
-color: crimson;
-text-decoration: none;
-}
-footer span a:hover{
-    text-decoration: underline;
+.form_wrap .input_radio:checked ~ span{
+	background: orangered;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* responsive media query start */
-@media (max-width: 1104px) {
-    .about .about-content .left img{
-        height: 350px;
-        width: 350px;
-    }
+.form_wrap .submit_btn{
+	width: 100%;
+	background: none;
+	padding: 10px;
+	border: 0;
+	border-radius: 3px;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	cursor: pointer;
 }
 
-@media (max-width: 991px) {
-    .max-width{
-        padding: 0 50px;
-    }
-}
-@media (max-width: 947px){
-    .menu-btn{
-        display: block;
-        z-index: 999;
-    }
-    .menu-btn i.active:before{
-        content: "\f00d";
-    }
-    .navbar .menu{
-        position: fixed;
-        height: 100vh;
-        width: 100%;
-        left: -100%;
-        top: 0;
-        background: #111;
-        text-align: center;
-        padding-top: 80px;
-        transition: all 0.3s ease;
-    }
-    .navbar .menu.active{
-        left: 0;
-    }
-    .navbar .menu li{
-        display: block;
-    }
-    .navbar .menu li a{
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 25px;
-    }
-    .home .home-content .text-2{
-        font-size: 70px;
-    }
-    .home .home-content .text-3{
-        font-size: 35px;
-    }
-    .home .home-content a{
-        font-size: 23px;
-        padding: 10px 30px;
-    }
-    .max-width{
-        max-width: 930px;
-    }
-    .about .about-content .column{
-        width: 100%;
-    }
-    .about .about-content .left{
-        display: flex;
-        justify-content: center;
-        margin: 0 auto 60px;
-    }
-    .about .about-content .right {
-        flex: 100%;
-    }
-    .skills .skills-content .column{
-        width: 100%;
-        margin-bottom: 35px;
-    }
-    .contact .contact-content .column{
-        width: 100%;
-        margin-bottom: 35px;
-    }
-
+.form_wrap .submit_btn:hover{
+	background: orangered;
 }
